saveIdealTextPositions(): New method for saving the original ideally computed  text widget positions.  This is necessary because a single invocation of  calculateEndingPoints() renews the LinePath ending points on ALL  AssociationWidgets, thus preventing consideration of the original ideal text  positions for all but the first AssociationWidget.  Adjustment of associations subsequent to a widget move now has two steps:  1) Loop over all attached AssociationWidgets and call saveIdealTextPositions()     for each AssociationWidget.  2) Loop over all attached AssociationWidgets and call widgetMoved() for each     AssociationWidget.

floatingText(): Redundant, use getTextWidgetByRole() instead (cosmetic change.)

BUG:127628

svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=637211